--- a/customdemo.css
+++ b/customdemo.css
@@ -466,6 +466,7 @@ a{
 	border: 3px solid #eee;
 }
 
+
 .member img{
 	width: 180px;
 	margin-left: -10px;
@@ -752,4 +753,71 @@ h2.grey{
 		width: 240px;
 	}
 
+}/*
+Team Page
+*/
+.card-block .btn-outline-primary {
+  width: 100%;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+  bottom: 0;
+  left: 0;
+  position: absolute;
 }
+
+.card {
+  margin: 20px 0;
+}
+
+/* Flip Cards CSS */
+.card-container {
+  perspective: 700px;
+}
+.card-flip {
+  position: relative;
+  width: 100%;
+  transform-style: preserve-3d;
+  height: auto;
+  transition: all 0.5s ease-out;
+  background: white;
+  border: none;
+}
+
+.card-flip div {
+  backface-visibility: hidden;
+  transform-style: preserve-3d;
+  height: 100%;
+  width: 100%;
+  border: none;
+}
+
+.card-flip .front {
+  position: relative;
+  z-index: 1;
+}
+
+.card-flip .back {
+  position: relative;
+  z-index: 0;
+  transform: rotateY(-180deg);
+}
+
+.card-container:hover .card-flip {
+  transform: rotateY(180deg);
+}
+
+.team_desc
+{
+	font-size:20px;
+}
+.dropdown_teams i
+{
+	font-size:20px;
+	padding:10px;
+	color:black;
+}
+.whitefont
+{
+	color:white;
+}
+/*Team page ends*/
